# etude-studio

./: .gitignore  ARCHITECTURE.md  README.md  RELEASE.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  main.rs  models.rs  storage.rs
src/components/: PdfPageViewer.tsx  PracticeScreen.tsx  ProjectHeader.tsx  ProjectLibrary.tsx  RecordingBrowser.tsx  ReviewScreen.tsx  ScoreAnnotation.tsx  ScorePanel.tsx  SetupScreen.tsx  Sidebar.tsx  TransportPanel.tsx  TutorialTour.tsx
src/lib/: api.ts  measure.ts  types.ts
