[package]
name = "reference-practice"
version = "0.1.0"
description = "Reference Practice desktop app"
authors = ["Codex"]
license = "MIT"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5.4" }

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "1.8.2", features = [] }
uuid = { version = "1", features = ["v4", "serde"] }

